--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,7 +1,83 @@
+@font-face {
+    font-family: 'Bebas';
+    src: url('../fonts/bebasneue-webfont.eot');
+    src: url('../fonts/bebasneue-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/bebasneue-webfont.woff2') format('woff2'),
+         url('../fonts/bebasneue-webfont.woff') format('woff'),
+         url('../fonts/bebasneue-webfont.ttf') format('truetype'),
+         url('../fonts/bebasneue-webfont.svg#bebas_neueregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+* {
+    margin: 0;
+    padding: 0;
+}
+
 body, html {
     width: 100%;
     height: 100%;
     margin: 0;
     padding: 0;
     overflow: hidden;
+}
+
+div.title {
+    width: 100%;
+    margin: 0 auto;
+    text-align: center;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    display: none;
+}
+
+h1 {
+    font-family: 'Bebas', sans-serif;
+    font-size: 100px;
+    line-height: 100px;
+    font-weight: normal;
+    color: #2b2b2b;
+    text-transform: uppercase;
+    -webkit-font-smoothing: antialiased;
+}
+
+h1.first {
+    position: absolute;
+    top: 45%;
+    left: 0;
+    right: 0;
+    margin-top: -50px;
+}
+
+h1.second, h1.third {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 50%;
+    margin-top: -50px;
+    display: none;
+}
+
+h1.third {
+    text-shadow: 1px 1px #161616, 2px 2px #161616, 3px 3px #161616, 4px 4px #161616, 5px 5px #161616, 6px 6px #161616, 7px 7px #161616;
+    -webkit-animation: shadow 1s linear 0s 1;
+}
+
+@-webkit-keyframes shadow {
+    from   {text-shadow: 1px 1px #161616, 2px 2px #161616, 3px 3px #161616;}
+    to  {text-shadow: 1px 1px #161616, 2px 2px #161616, 3px 3px #161616, 4px 4px #161616, 5px 5px #161616, 6px 6px #161616, 7px 7px #161616;}
+}
+
+a.next {
+    position: absolute;
+    top: 50%;
+    margin-top: 24px;
+    margin-left: -34px;
+    display: inline-block;
+    width: 68px;
+    height: 68px;
+    background: url(../images/right_arrow.png);
 }
